--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -40,13 +41,15 @@ javac.classpath=\
     ${libs.ejb3-persistence.classpath}:\
     ${file.reference.postgresql-8.3-603.jdbc3.jar}:\
     ${libs.BlazeDS-4.0.0.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.13-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
