--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -14,6 +14,14 @@ libs.BlazeDS-4.0.0.displayName=BlazeDS-4.0.0
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=Tarefa CopyLibs
+libs.eclipselink.classpath=\
+    ${base}/eclipselink/eclipselink-2.3.0.jar:\
+    ${base}/eclipselink/javax.persistence-2.0.jar:\
+    ${base}/eclipselink/org.eclipse.persistence.jpa.jpql_1.0.0.jar
+libs.eclipselink.displayName=EclipseLink(JPA 2.0)
+libs.eclipselinkmodelgen.classpath=\
+    ${base}/eclipselinkmodelgen/eclipselink-jpa-modelgen-2.3.0.jar
+libs.eclipselinkmodelgen.displayName=EclipseLink-ModelGen(JPA 2.0)
 libs.ejb3-persistence.classpath=\
     ${base}/ejb3-persistence/ejb3-persistence.jar
 libs.ejb3-persistence.displayName=Persistence
